Issue #37: Some more tuning to the CSS.
Added one, two, three column layout based on browser window size.
Fixed content too long problem. Reduced size of source text.

--- a/webpage/static/css/global.css
+++ b/webpage/static/css/global.css
@@ -81,7 +81,8 @@ footer {
 /* Navigation area */
 #content nav {
   box-sizing: border-box;
-  flex: 1 2 auto;
+  /* grow shrink basis */
+  flex: 1 2 25%;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -89,6 +90,7 @@ footer {
 /* Content-Area */
 #content main {
   box-sizing: border-box;
+  /* grow shrink basis */
   flex: 0 1 800px;
   margin-left: 10px;
   margin-right: 10px;
@@ -97,9 +99,67 @@ footer {
 /* Currently empty space on the right side */
 #content #secondary {
   box-sizing: border-box;
-  flex: 1 2 auto;
-  margin-left: 10px;
-  margin-right: 10px;
+  /* grow shrink basis */
+}
+
+/* One column layout: Navigation on top, content below */
+@media (max-width: 800px) {
+  /* Columnar layout */
+  #content  {  
+    flex-flow: column nowrap;
+  }
+  
+  /* Navigation left aligned */
+  nav li {
+    text-align: left;
+  }
+  
+  /* Secondary is empty */
+  #secondary {
+    flex: 0 0 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+/* Two column layout: navigation left, content right */
+@media (min-width: 801px) and (max-width: 1279px) {
+  /* Row layout */
+  #content  {  
+    flex-flow: row nowrap;
+  }
+
+  /* Navigation right aligned */
+  nav li {
+    text-align: right;
+  }
+  
+  /* Secondary is empty */
+  #secondary {
+    flex: 0 0 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+/* Three column layout: navigation left, content center, empty column on the right */
+@media (min-width: 1280px) {
+  /* Row layout */
+  #content  {  
+    flex-flow: row nowrap;
+  }
+  
+  /* Navigation right aligned */
+  nav li {
+    text-align: right;
+  }
+  
+  #secondary {
+    flex: 0 0 0%;
+    flex: 1 2 25%;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 /*
@@ -117,7 +177,7 @@ nav li {
   display: block;
   margin: 0px;
   padding: 0px;
-  text-align: right;
+/*  text-align: right;*/
 }
 
 /** Nested menu entry is smaller */
@@ -140,6 +200,7 @@ nav li.active > div {
   color: white;
   background-color: black;
   font-weight: bold;
+  background-image:linear-gradient(to left, black 0%, white 50%)  
 }
 
 /*
@@ -342,7 +403,7 @@ highlight .hll { background-color: #ffffcc }
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
 
 code {
-  font-size: 14px;
+  font-size: 12px;
   color: #555555;
 }
 
